# topical-authority-discovery

./: .gitignore  README.md  pyproject.toml  requirements.txt
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml  parameters_data_processing.yml
conf/local/: credentials.yml  parameters.yml
data/01_raw/: fashion_entities.csv  fashion_followers_10_90.csv  fashion_followers_20_80.csv  fashion_followers_30_70.csv  fashion_followers_40_60.csv  fashion_followers_50_50.csv  fashion_users_10_90.csv  fashion_users_20_80.csv  fashion_users_30_70.csv  fashion_users_40_60.csv  fashion_users_50_50.csv  followers.csv  users.csv
src/: requirements.txt
src/tests/: conftest.py
src/tests/pipelines/data_processing/: test_alf_workflow.py  test_nodes.py
src/topical_authority_discovery/: __init__.py  __main__.py  settings.py  utils.py
src/topical_authority_discovery/pipelines/: __init__.py
src/topical_authority_discovery/pipelines/data_processing/: __init__.py  nodes.py  pipeline.py
